# Residual_RL_0611

./: .gitattributes  .gitignore  README.md  notes.md  pyproject.toml  task_plan.md
data/earthquakes/: CHICHI_X_SF1_TSF0.2.txt  KOBE_X_SF1.8_TSF0.2.txt  PID.csv  TABAS_X_SF1_TSF0.4.txt  TORTHR_X_SF1_TSF0.2.txt
data/reference/: 0_50Hz_0.4mm.txt  0_50Hz_1mm.txt  Tohuku_X_SF1_TSF1.txt
docs/: migration_manifest.md
docs/audits/: stage0_codex_self_review.md  stage1_cc_and_local_adversarial_review.md
docs/research/: research_notes.md  research_question_card.md  research_task_plan.md  residual_rl_pid_literature_landscape.md  residual_rl_pid_literature_matrix.md  zotero_residual_rl_collection.json  zotero_residual_rl_collection.md
docs/superpowers/plans/: 2026-06-11-equivalent-disturbance-residual-sac.md
legacy/0423/: crrl_vibration_control_8.ipynb  crrl_vibration_control_8_1.ipynb
scripts/: run_smoke.py
src/residual_rl0611/: __init__.py  config.py  controllers.py  data.py  env.py  evaluate.py  metrics.py  plant.py  sac.py  train.py
tests/: test_environment.py  test_metrics.py  test_plant_residuals.py
